--- a/poster-gallery.html
+++ b/poster-gallery.html
@@ -77,7 +77,7 @@
 
     <main class="gallery-grid">
         
-        <div class="gallery-item"><img src=""C:\Users\panwa\Desktop\port\poster\CBI BASANT.jpg"" ></div>
+        <div class="gallery-item"><img src="C:\Users\panwa\Desktop\port\poster\CBI BASANT.jpg"></div>
         <div class="gallery-item"><img src="images/poster-2.jpg" ></div>
         <div class="gallery-item"><img src="images/poster-3.jpg" ></div>
         <div class="gallery-item"><img src="images/poster-4.jpg" ></div>
@@ -86,3 +86,4 @@
 </body>
 
 </html>
+
