--- a/poster-gallery.html
+++ b/poster-gallery.html
@@ -77,7 +77,7 @@
 
     <main class="gallery-grid">
         
-        <div class="gallery-item"><img src="<img src="poster/CBI BASANT.jpg"></div>
+        <div class="gallery-item"><img src="poster/CBI BASANT.jpg"></div>
         <div class="gallery-item"><img src="images/poster-2.jpg" ></div>
         <div class="gallery-item"><img src="images/poster-3.jpg" ></div>
         <div class="gallery-item"><img src="images/poster-4.jpg" ></div>
@@ -86,5 +86,6 @@
 </body>
 
 </html>
+
 
 
