--- a/poster-gallery.html
+++ b/poster-gallery.html
@@ -78,14 +78,15 @@
     <main class="gallery-grid">
         
         <div class="gallery-item"><img src="poster/CBI BASANT.jpg"></div>
-        <div class="gallery-item"><img src="images/poster-2.jpg" ></div>
-        <div class="gallery-item"><img src="images/poster-3.jpg" ></div>
-        <div class="gallery-item"><img src="images/poster-4.jpg" ></div>
+        <div class="gallery-item"><img src="poster/jawaani.jpg" ></div>
+        <div class="gallery-item"><img src="poster/moose print.jpg" ></div>
+        <div class="gallery-item"><img src="poster/rajput.jpg" ></div>
         </main>
 
 </body>
 
 </html>
+
 
 
 
